--- a/style.css
+++ b/style.css
@@ -132,8 +132,7 @@ nav a:visited {
   display: none;
 }
 
-/*Home*/
-
+/* HOME */
 .home {
   position: relative;
   min-height: 85vh;
@@ -145,22 +144,22 @@ nav a:visited {
   border-bottom: var(--border);
 }
 
-.home ::before {
+.home::before {
   content: "";
   position: absolute;
   top: 0;
   left: 0;
   width: 100%;
   height: 100%;
-  background: rgba(0, 0, 0, 0.5);
+  background: rgba(0,0,0, 0.5);
   z-index: 1;
 }
-
 .home .content {
   max-width: 60rem;
   position: relative;
   z-index: 2;
 }
+
 .home .content h3 {
   font-size: 6rem;
   text-transform: uppercase;
@@ -170,7 +169,7 @@ nav a:visited {
 .home .content p {
   font-size: 2rem;
   font-weight: lighter;
-  list-style: 1.8;
+  line-height: 1.8;
   padding: 1rem 0;
   color: #fff;
 }
