--- a/style.css
+++ b/style.css
@@ -111,6 +111,7 @@ section {
 nav a:visited {
   color: white;
 }
+
 .header .icons {
   display: flex;
   align-items: center;
@@ -119,11 +120,13 @@ nav a:visited {
 .header .icons div {
   margin-left: 2rem;
 }
+
 .header .icons div ion-icon {
   color: #fff;
   cursor: pointer;
   font-size: 2.5rem;
 }
+
 .header .icons div ion-icon:hover {
   color: var(--main-color);
 }
@@ -151,9 +154,10 @@ nav a:visited {
   left: 0;
   width: 100%;
   height: 100%;
-  background: rgba(0,0,0, 0.5);
+  background: rgba(0, 0, 0, 0.5);
   z-index: 1;
 }
+
 .home .content {
   max-width: 60rem;
   position: relative;
@@ -172,4 +176,84 @@ nav a:visited {
   line-height: 1.8;
   padding: 1rem 0;
   color: #fff;
+}
+
+/* ABOUT */
+
+.about .row {
+  display: flex;
+  align-items: center;
+  background: var(--bg-card);
+  flex-wrap: wrap;
+  border: var(--border);
+}
+
+.about .row .image {
+  flex: 1 1 45rem;
+}
+
+.about .row .image img {
+  width: 100%;
+}
+
+.about .row .content {
+  flex: 1 1 45rem;
+  padding: 2rem;
+}
+
+.about .row .content h3 {
+  font-size: 3rem;
+  color: #fff;
+}
+
+.about .row .content p {
+  font-size: 1.6rem;
+  color: #ccc;
+  padding: 1rem 0;
+  line-height: 1.8rem;
+}
+
+/* Menu */
+.menu .box-container {
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(30rem, 1fr));
+  gap: 1.5rem;
+}
+
+.menu .box-container .box {
+  padding: 5rem;
+  text-align: center;
+  border: var(--border);
+  background-color: var(--bg-card);
+}
+
+.menu .box-container .box img {
+  height: 18rem;
+  border-radius: 100%;
+}
+
+.menu .box-container .box h3 {
+  color: #fff;
+  font-size: 2rem;
+  padding: 1rem 0;
+}
+
+.menu .box-container .box .price {
+  color: #fff;
+  font-size: 2.5rem;
+  padding: 0.5rem 0;
+}
+
+.menu .box-container .box .price span {
+  font-size: 1.5rem;
+  text-decoration: line-through;
+  font-weight: lighter;
+}
+
+.menu .box-container .box:hover {
+ background: #fff;
+}
+
+.menu .box-container .box:hover > * {
+  color: black;
 }
